force-app/main/default/objects/facture_devis__c/facture_devis__c.object-meta.xml
<CustomObject>
    <label>Finance</label>
    <nameField>
        <label>Numéro de devis / facture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>