force-app/main/default/objects/facture_devis__c/fields/ALD__c.field-meta.xml
<CustomField>
    <fullName>ALD__c</fullName>
    <formula>service__r.affection_longue_duree__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALD</label>
    <type>Checkbox</type>
</CustomField>