force-app/main/default/objects/facture_devis__c/fields/Autre_justificatif__c.field-meta.xml
<CustomField>
    <fullName>Autre_justificatif__c</fullName>
    <label>Autre justificatif</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pieces_justificatives</valueSetName>
    </valueSet>
</CustomField>