force-app/main/default/objects/facture_devis__c/fields/Avoir__c.field-meta.xml
<CustomField>
    <fullName>Avoir__c</fullName>
    <label>Avoir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>