force-app/main/default/objects/facture_devis__c/fields/Commentaire_BAP__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_BAP__c</fullName>
    <label>Commentaire BAP</label>
    <type>TextArea</type>
</CustomField>