force-app/main/default/objects/facture_devis__c/fields/Complement_nuitee__c.field-meta.xml
<CustomField>
    <fullName>Complement_nuitee__c</fullName>
    <label>Complément nuitée</label>
    <length>255</length>
    <type>Text</type>
</CustomField>