force-app/main/default/objects/facture_devis__c/fields/Contrevaleur_en_euros_validee_Ebury__c.field-meta.xml
<CustomField>
    <fullName>Contrevaleur_en_euros_validee_Ebury__c</fullName>
    <label>Contrevaleur en euros validée Ebury</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>