force-app/main/default/objects/facture_devis__c/fields/Contrevaleur_euros__c.field-meta.xml
<CustomField>
    <fullName>Contrevaleur_euros__c</fullName>
    <formula>Taux_change__c *  montant_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrevaleur en euros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>