force-app/main/default/objects/facture_devis__c/fields/Contrevaleur_montant_total_PEC_c__c.field-meta.xml
<CustomField>
    <fullName>Contrevaleur_montant_total_PEC_c__c</fullName>
    <label>Contrevaleur en euros estimée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>