force-app/main/default/objects/facture_devis__c/fields/ControleManagement__c.field-meta.xml
<CustomField>
    <fullName>ControleManagement__c</fullName>
    <label>Contrôle management</label>
    <type>TextArea</type>
</CustomField>