force-app/main/default/objects/facture_devis__c/fields/CoordonneesBancaire__c.field-meta.xml
<CustomField>
    <fullName>CoordonneesBancaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordonnées Bancaire</label>
    <referenceTo>CoordonneesBancaires__c</referenceTo>
    <relationshipLabel>Finances</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>