force-app/main/default/objects/facture_devis__c/fields/Date_de_fin_de_GOP__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_GOP__c</fullName>
    <label>Date de fin de GOP</label>
    <type>Date</type>
</CustomField>