force-app/main/default/objects/facture_devis__c/fields/Date_de_mise_en_paiement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_mise_en_paiement__c</fullName>
    <label>Date de mise en paiement</label>
    <type>Date</type>
</CustomField>