force-app/main/default/objects/facture_devis__c/fields/Date_debut_previsionnelle_prestation__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_previsionnelle_prestation__c</fullName>
    <label>Date début prévisionnelle prestation</label>
    <type>Date</type>
</CustomField>