force-app/main/default/objects/facture_devis__c/fields/Date_echeance__c.field-meta.xml
<CustomField>
    <fullName>Date_echeance__c</fullName>
    <formula>IF( 
						RecordType.Name == &quot;Facture&quot;, 
						IF( 
										Bon_a_payer_rapide__c, 
										Date_de_mise_en_paiement__c + 5, 
										Date_reception_facture__c + Emetteur_facture__r.Modalites_paiement__c), 
						IF( 
										RecordType.Name == &quot;Remboursement&quot;, 
										Date_reception_facture__c + Modalites_de_remboursement__c, 
										NULL ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date d’échéance</label>
    <type>Date</type>
</CustomField>