force-app/main/default/objects/facture_devis__c/fields/Date_fin_document_financier__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_document_financier__c</fullName>
    <label>Date de fin du document financier</label>
    <type>Date</type>
</CustomField>