force-app/main/default/objects/facture_devis__c/fields/Date_fin_previsionnelle_prestation__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_previsionnelle_prestation__c</fullName>
    <label>Date fin prévisionnelle prestation</label>
    <type>Date</type>
</CustomField>