force-app/main/default/objects/facture_devis__c/fields/Date_reception_facture__c.field-meta.xml
<CustomField>
    <fullName>Date_reception_facture__c</fullName>
    <label>Date de réception</label>
    <type>Date</type>
</CustomField>