force-app/main/default/objects/facture_devis__c/fields/DateHeure_contrevaleur_euro__c.field-meta.xml
<CustomField>
    <fullName>DateHeure_contrevaleur_euro__c</fullName>
    <label>Date et heure de la contrevaleur en euro</label>
    <type>DateTime</type>
</CustomField>