force-app/main/default/objects/facture_devis__c/fields/Decision_medicale__c.field-meta.xml
<CustomField>
    <fullName>Decision_medicale__c</fullName>
    <label>Décision médicale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infirmier</fullName>
            </value>
            <value>
                <fullName>Medecin</fullName>
                <label>Médecin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>