force-app/main/default/objects/facture_devis__c/fields/DecisionMedicale__c.field-meta.xml
<CustomField>
    <fullName>DecisionMedicale__c</fullName>
    <label>Décision médicale</label>
    <type>TextArea</type>
</CustomField>