force-app/main/default/objects/facture_devis__c/fields/DestinatairePaiement__c.field-meta.xml
<CustomField>
    <fullName>DestinatairePaiement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destinataire du paiement</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Finances (Destinataire du paiement)</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>