force-app/main/default/objects/facture_devis__c/fields/DestinatairePaiementTXT__c.field-meta.xml
<CustomField>
    <fullName>DestinatairePaiementTXT__c</fullName>
    <label>Destinataire du paiement (text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>