force-app/main/default/objects/facture_devis__c/fields/Devis_associe__c.field-meta.xml
<CustomField>
    <fullName>Devis_associe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis associé</label>
    <referenceTo>facture_devis__c</referenceTo>
    <relationshipLabel>Finances</relationshipLabel>
    <relationshipName>Devis_associes</relationshipName>
    <type>Lookup</type>
</CustomField>