force-app/main/default/objects/facture_devis__c/fields/Devise_depense__c.field-meta.xml
<CustomField>
    <fullName>Devise_depense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devise (Dépense)</label>
    <referenceTo>devise__c</referenceTo>
    <relationshipLabel>Finances (Devise (Dépense))</relationshipLabel>
    <relationshipName>Finances_Depense</relationshipName>
    <type>Lookup</type>
</CustomField>