force-app/main/default/objects/facture_devis__c/fields/Devise_finance_refacturation__c.field-meta.xml
<CustomField>
    <fullName>Devise_finance_refacturation__c</fullName>
    <formula>IF( RecordType.DeveloperName =&quot;Remboursement&quot;, Devise_remboursement__r.Name, devise_lookup__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Devise finance</label>
    <type>Text</type>
</CustomField>