force-app/main/default/objects/facture_devis__c/fields/Devise_remboursement__c.field-meta.xml
<CustomField>
    <fullName>Devise_remboursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devise (remboursement)</label>
    <referenceTo>devise__c</referenceTo>
    <relationshipLabel>Finances (Devise (remboursement))</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>