force-app/main/default/objects/facture_devis__c/fields/Duree_du_sejour_couverte__c.field-meta.xml
<CustomField>
    <fullName>Duree_du_sejour_couverte__c</fullName>
    <label>Durée du séjour couverte</label>
    <length>15</length>
    <type>Text</type>
</CustomField>