force-app/main/default/objects/facture_devis__c/fields/Duree_du_sejour_finance__c.field-meta.xml
<CustomField>
    <fullName>Duree_du_sejour_finance__c</fullName>
    <label>Durée du séjour finance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>