force-app/main/default/objects/facture_devis__c/fields/Emetteur_facture__c.field-meta.xml
<CustomField>
    <fullName>Emetteur_facture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emetteur facture</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finances (Emetteur facture)</relationshipLabel>
    <relationshipName>Finances1</relationshipName>
    <type>Lookup</type>
</CustomField>