force-app/main/default/objects/facture_devis__c/fields/En_attente_justificatifs__c.field-meta.xml
<CustomField>
    <fullName>En_attente_justificatifs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En attente justificatifs</label>
    <type>Checkbox</type>
</CustomField>