force-app/main/default/objects/facture_devis__c/fields/etat__c.field-meta.xml
<CustomField>
    <fullName>etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyse</fullName>
                <default>true</default>
                <label>Analyse</label>
            </value>
            <value>
                <fullName>Bon a payer</fullName>
                <label>Bon à payer</label>
            </value>
            <value>
                <fullName>Conforme et complet</fullName>
            </value>
            <value>
                <fullName>En attente validation admin</fullName>
            </value>
            <value>
                <fullName>Envoye Ebury</fullName>
                <label>Envoyé Ebury</label>
            </value>
            <value>
                <fullName>Facture payee</fullName>
                <label>Facture payée</label>
            </value>
            <value>
                <fullName>Facture refacturee</fullName>
                <label>Facture refacturée</label>
            </value>
            <value>
                <fullName>GOP Urgence</fullName>
            </value>
            <value>
                <fullName>Incomplet</fullName>
            </value>
            <value>
                <fullName>Mise en paiement</fullName>
            </value>
            <value>
                <fullName>Non defini</fullName>
                <label>Non défini</label>
            </value>
            <value>
                <fullName>Prise en charge refusee</fullName>
                <label>Prise en charge refusée</label>
            </value>
            <value>
                <fullName>Prise en charge validee</fullName>
                <label>Prise en charge validée</label>
            </value>
            <value>
                <fullName>Rejete</fullName>
                <label>Rejeté</label>
            </value>
            <value>
                <fullName>Echec Paiement</fullName>
            </value>
            <value>
                <fullName>Rembourse</fullName>
                <label>Remboursé</label>
            </value>
            <value>
                <fullName>Remboursement refacture</fullName>
                <label>Remboursement refacturé</label>
            </value>
            <value>
                <fullName>Conforme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>