force-app/main/default/objects/facture_devis__c/fields/Evenement__c.field-meta.xml
<CustomField>
    <fullName>Evenement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evénement</label>
    <referenceTo>evenement__c</referenceTo>
    <relationshipLabel>Evenement</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>