force-app/main/default/objects/facture_devis__c/fields/Facture_Achat__c.field-meta.xml
<CustomField>
    <fullName>Facture_Achat__c</fullName>
    <label>Facture Achat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>