force-app/main/default/objects/facture_devis__c/fields/Facture_Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Facture_Fournisseur__c</fullName>
    <label>Facture Fournisseur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>