force-app/main/default/objects/facture_devis__c/fields/Formule__c.field-meta.xml
<CustomField>
    <fullName>Formule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formule</label>
    <referenceTo>formule_vyv_ia__c</referenceTo>
    <relationshipLabel>Finances</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>