force-app/main/default/objects/facture_devis__c/fields/Fournisseur_facturation__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur_facturation__c</fullName>
    <formula>IF( RecordType.DeveloperName =&quot;Remboursement&quot;, DestinatairePaiementTXT__c , Emetteur_facture__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fournisseur</label>
    <type>Text</type>
</CustomField>