force-app/main/default/objects/facture_devis__c/fields/Garantie__c.field-meta.xml
<CustomField>
    <fullName>Garantie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantie</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>garantie_du_service__c.service__c</field>
            <operation>equals</operation>
            <valueField>$Source.service__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>garantie_du_service__c</referenceTo>
    <relationshipLabel>Finances</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>