force-app/main/default/objects/facture_devis__c/fields/Id_paiement__c.field-meta.xml
<CustomField>
    <fullName>Id_paiement__c</fullName>
    <label>ID Paiement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>