force-app/main/default/objects/facture_devis__c/fields/Justificatif_identite__c.field-meta.xml
<CustomField>
    <fullName>Justificatif_identite__c</fullName>
    <label>Justificatif identité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pieces_justificatives</valueSetName>
    </valueSet>
</CustomField>