force-app/main/default/objects/facture_devis__c/fields/Justificatif_medical__c.field-meta.xml
<CustomField>
    <fullName>Justificatif_medical__c</fullName>
    <label>Justificatif médical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pieces_justificatives</valueSetName>
    </valueSet>
</CustomField>