force-app/main/default/objects/facture_devis__c/fields/Justificatifs_attendus__c.field-meta.xml
<CustomField>
    <fullName>Justificatifs_attendus__c</fullName>
    <label>Justificatifs attendus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administratifs</fullName>
            </value>
            <value>
                <fullName>Medicaux</fullName>
                <label>Médicaux</label>
            </value>
            <value>
                <fullName>Financiers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>