force-app/main/default/objects/facture_devis__c/fields/Liste_de_moyens__c.field-meta.xml
<CustomField>
    <fullName>Liste_de_moyens__c</fullName>
    <label>Liste de moyens</label>
    <type>TextArea</type>
</CustomField>