force-app/main/default/objects/facture_devis__c/fields/Lot_paiement__c.field-meta.xml
<CustomField>
    <fullName>Lot_paiement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot de paiement</label>
    <referenceTo>Lot_paiement__c</referenceTo>
    <relationshipLabel>Finances</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>