force-app/main/default/objects/facture_devis__c/fields/Modalites_de_remboursement__c.field-meta.xml
<CustomField>
    <fullName>Modalites_de_remboursement__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Modalités de remboursement</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>