force-app/main/default/objects/facture_devis__c/fields/ModeleEconomique__c.field-meta.xml
<CustomField>
    <fullName>ModeleEconomique__c</fullName>
    <label>Modèle économique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Prestation</fullName>
            </value>
            <value>
                <fullName>Prime/Prestation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>