force-app/main/default/objects/facture_devis__c/fields/Montant_initial_en_devises__c.field-meta.xml
<CustomField>
    <fullName>Montant_initial_en_devises__c</fullName>
    <label>Montant initial en devises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>