force-app/main/default/objects/facture_devis__c/fields/montant_total__c.field-meta.xml
<CustomField>
    <fullName>montant_total__c</fullName>
    <label>Montant total en devises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>