force-app/main/default/objects/facture_devis__c/fields/Motif_de_reject__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_reject__c</fullName>
    <label>Motif de reject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manque de la mention</fullName>
                <label>Manque de la mention VYV IA / LLT Consulting</label>
            </value>
            <value>
                <fullName>Manque date de facture</fullName>
            </value>
            <value>
                <fullName>Manque numero de facture</fullName>
                <label>Manque numéro de facture</label>
            </value>
            <value>
                <fullName>Manque mention Facture</fullName>
            </value>
            <value>
                <fullName>Manque en-tete / Document non-officiel</fullName>
                <label>Manque en-tête / Document non-officiel</label>
            </value>
            <value>
                <fullName>Manque date de l evenement</fullName>
                <label>Manque date de l&apos;événement  (admission et sortie)</label>
            </value>
            <value>
                <fullName>Manque nom du patient</fullName>
            </value>
            <value>
                <fullName>Mauvais nom du patient / Mauvais montant / Facturation d elements non PEC / Mauvaise application des couvertures</fullName>
                <label>Mauvais nom du patient / Mauvais montant / Facturation d&apos;éléments non PEC / Mauvaise application des couvertures</label>
            </value>
            <value>
                <fullName>Erreur gestion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>