force-app/main/default/objects/facture_devis__c/fields/Motif_de_rejet_Ebury__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_rejet_Ebury__c</fullName>
    <label>Motif de rejet Ebury</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>