force-app/main/default/objects/facture_devis__c/fields/Notes_GOP__c.field-meta.xml
<CustomField>
    <fullName>Notes_GOP__c</fullName>
    <label>Notes GOP</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>