force-app/main/default/objects/facture_devis__c/fields/Notes_internes_analyse__c.field-meta.xml
<CustomField>
    <fullName>Notes_internes_analyse__c</fullName>
    <label>Notes internes analyse</label>
    <type>TextArea</type>
</CustomField>