force-app/main/default/objects/facture_devis__c/fields/Notes_internes_conformite__c.field-meta.xml
<CustomField>
    <fullName>Notes_internes_conformite__c</fullName>
    <label>Notes internes conformité</label>
    <type>TextArea</type>
</CustomField>