force-app/main/default/objects/facture_devis__c/fields/Notes_internes_paiement_facturation__c.field-meta.xml
<CustomField>
    <fullName>Notes_internes_paiement_facturation__c</fullName>
    <label>Notes internes paiement / facturation</label>
    <type>TextArea</type>
</CustomField>