force-app/main/default/objects/facture_devis__c/fields/Notes_internes_traitement__c.field-meta.xml
<CustomField>
    <fullName>Notes_internes_traitement__c</fullName>
    <label>Notes internes traitement</label>
    <type>TextArea</type>
</CustomField>