force-app/main/default/objects/facture_devis__c/fields/NotesInternesConsultationMedicale__c.field-meta.xml
<CustomField>
    <fullName>NotesInternesConsultationMedicale__c</fullName>
    <label>Notes internes consultation médicale</label>
    <type>TextArea</type>
</CustomField>