force-app/main/default/objects/facture_devis__c/fields/Nuitee__c.field-meta.xml
<CustomField>
    <fullName>Nuitee__c</fullName>
    <label>Nuitée</label>
    <length>255</length>
    <type>Text</type>
</CustomField>