force-app/main/default/objects/facture_devis__c/fields/Numero_du_service__c.field-meta.xml
<CustomField>
    <fullName>Numero_du_service__c</fullName>
    <formula>service__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro du service</label>
    <type>Text</type>
</CustomField>