force-app/main/default/objects/facture_devis__c/fields/Prestataire_Finance__c.field-meta.xml
<CustomField>
    <fullName>Prestataire_Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestataire Finance</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finances (Prestataire Finance)</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>