force-app/main/default/objects/facture_devis__c/fields/Prestataire_inconnu_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Prestataire_inconnu_checkbox__c</fullName>
    <formula>NOT(ISBLANK(Prestataire_inconnu_text__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prestataire inconnu</label>
    <type>Checkbox</type>
</CustomField>