force-app/main/default/objects/facture_devis__c/fields/Prestataire_inconnu_text__c.field-meta.xml
<CustomField>
    <fullName>Prestataire_inconnu_text__c</fullName>
    <label>Prestataire (inconnu)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>