force-app/main/default/objects/facture_devis__c/fields/prestataire_logistique__c.field-meta.xml
<CustomField>
    <fullName>prestataire_logistique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestataire logistique</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finances (Prestataire logistique)</relationshipLabel>
    <relationshipName>Factures_Devis1</relationshipName>
    <type>Lookup</type>
</CustomField>