force-app/main/default/objects/facture_devis__c/fields/Pret_pour_mise_en_paiement__c.field-meta.xml
<CustomField>
    <fullName>Pret_pour_mise_en_paiement__c</fullName>
    <label>Prêt pour mise en paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUI</fullName>
            </value>
            <value>
                <fullName>NON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>