force-app/main/default/objects/facture_devis__c/fields/Preuve_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Preuve_de_paiement__c</fullName>
    <label>Preuve de paiement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>