force-app/main/default/objects/facture_devis__c/fields/Remboursement_refacture__c.field-meta.xml
<CustomField>
    <fullName>Remboursement_refacture__c</fullName>
    <label>Remboursement refacturé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUI</fullName>
            </value>
            <value>
                <fullName>NON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>