force-app/main/default/objects/facture_devis__c/fields/Responsable_validation_devis_urgence__c.field-meta.xml
<CustomField>
    <fullName>Responsable_validation_devis_urgence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable validation devis urgence</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>