force-app/main/default/objects/facture_devis__c/fields/RIB__c.field-meta.xml
<CustomField>
    <fullName>RIB__c</fullName>
    <label>RIB</label>
    <type>TextArea</type>
</CustomField>