force-app/main/default/objects/facture_devis__c/fields/Sous_type__c.field-meta.xml
<CustomField>
    <fullName>Sous_type__c</fullName>
    <label>Sous-type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frais Medicaux</fullName>
                <label>Frais médicaux</label>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Conseil</fullName>
            </value>
            <value>
                <fullName>HAD</fullName>
            </value>
            <value>
                <fullName>Correspondant</fullName>
                <isActive>false</isActive>
                <label>Correspondant</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Prestataire de sante</fullName>
                <isActive>false</isActive>
                <label>Prestataire de santé</label>
            </value>
            <value>
                <fullName>Prestataire logistique</fullName>
                <isActive>false</isActive>
                <label>Prestataire logistique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>