force-app/main/default/objects/facture_devis__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyse</fullName>
            </value>
            <value>
                <fullName>Prise en charge</fullName>
            </value>
            <value>
                <fullName>Consultation medicale</fullName>
                <label>Consultation médicale</label>
            </value>
            <value>
                <fullName>Conformite</fullName>
                <label>Conformité</label>
            </value>
            <value>
                <fullName>Traitement</fullName>
            </value>
            <value>
                <fullName>Controle</fullName>
                <label>Contrôle</label>
            </value>
            <value>
                <fullName>Paiement_Facturation</fullName>
                <label>Paiement / Facturation</label>
            </value>
            <value>
                <fullName>Bon a payer</fullName>
                <isActive>false</isActive>
                <label>Bon à payer</label>
            </value>
            <value>
                <fullName>Devis rejete</fullName>
                <isActive>false</isActive>
                <label>Devis rejeté</label>
            </value>
            <value>
                <fullName>Devis valide</fullName>
                <isActive>false</isActive>
                <label>Devis validé</label>
            </value>
            <value>
                <fullName>Echec Paiement</fullName>
                <isActive>false</isActive>
                <label>Echec Paiement</label>
            </value>
            <value>
                <fullName>En attente demande de pieces</fullName>
                <isActive>false</isActive>
                <label>En attente demande de pièces</label>
            </value>
            <value>
                <fullName>En attente validation medicale</fullName>
                <isActive>false</isActive>
                <label>En attente validation médicale</label>
            </value>
            <value>
                <fullName>Envoye Ebury</fullName>
                <isActive>false</isActive>
                <label>Envoyé Ebury</label>
            </value>
            <value>
                <fullName>Facture payee</fullName>
                <isActive>false</isActive>
                <label>Facture payée</label>
            </value>
            <value>
                <fullName>Facture refacturee</fullName>
                <isActive>false</isActive>
                <label>Facture refacturée</label>
            </value>
            <value>
                <fullName>Facture rejetee</fullName>
                <isActive>false</isActive>
                <label>Facture rejetée</label>
            </value>
            <value>
                <fullName>Mise en paiement</fullName>
                <isActive>false</isActive>
                <label>Mise en paiement</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
                <isActive>false</isActive>
                <label>Qualification</label>
            </value>
            <value>
                <fullName>Remboursement refacture</fullName>
                <isActive>false</isActive>
                <label>Remboursement refacturé</label>
            </value>
            <value>
                <fullName>Remboursement rejete</fullName>
                <isActive>false</isActive>
                <label>Remboursement rejeté</label>
            </value>
            <value>
                <fullName>Rembourse</fullName>
                <isActive>false</isActive>
                <label>Remboursé</label>
            </value>
            <value>
                <fullName>Validation DG</fullName>
                <isActive>false</isActive>
                <label>Validation DG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>